<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:src="@drawable/logo" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llCaseCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCaseCalender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/case_calender"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAddNewCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAddNewCase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/add_new_case"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCompletedCases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCompletedCases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/completed_cases"
                    android:textColor="@color/red"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llUnUpdatedCases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUnUpdatedCases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/unupdated_cases"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llViewAllCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvViewAllCase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/view_all_case"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/reminder"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAppointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/add_new_appointment"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAllAppointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAllAppointment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/view_all_appointment"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSegment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSegment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/segments_of_law_and_legal"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llUsefulLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUsefulLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/useful_link"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPhoneBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPhoneBook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/phone_book"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/about_us"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llApproveList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvApproveList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/approve_list"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvNews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/news"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llBroadcast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvBroadcast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/broadcast"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFindCaseByMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvFindCaseByMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/find_case_by_mobile"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFindCaseByDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvFindCaseByDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/find_case_by_date"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/font_regular"
                    android:padding="5dp"
                    android:text="@string/logout"
                    android:textColor="#777777"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eeeeee" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>