<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Activity.VerifyOtpActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/main_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B100ACDD" />


        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/font_regular"
                android:padding="5dp"
                android:text="@string/verify_otp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_round_white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_round_color_primary">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:adjustViewBounds="true"
                        android:padding="7dp"
                        android:src="@drawable/ic_otp"
                        android:tint="@color/white" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edtOTP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/font_regular"
                    android:hint="@string/enter_your_otp"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvResendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/font_regular"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/resend_otp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/shape_round_color_primary_border"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/font_regular"
                android:padding="5dp"
                android:text="@string/or"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/shape_round_color_primary_border"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</layout>