<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_round_white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@drawable/shape_round_color_primary">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:adjustViewBounds="true"
                        android:padding="7dp"
                        android:src="@drawable/ic_phone"
                        android:tint="@color/black" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edtMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/font_regular"
                    android:gravity="start|center"
                    android:hint="@string/mobile_no"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:textColorHint="#cacaca"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_round_color_primary_border"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAllCase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvDataNotFound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_regular"
            android:gravity="center"
            android:text="@string/date_not_found"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>
</layout>